--- a/index.html
+++ b/index.html
@@ -37,7 +37,6 @@
                 <input type="text" id="name-input">
                 <button id="name-submit" class="btn btn-standard">Submit</button>
             </div>
-            <div class="announcment">Testing</div>
             <div class="whos-turn">Your turn</div>
         </div>
     </div>
@@ -46,19 +45,22 @@
         <div class="container">
             <div class="boxes player-1 col-md-4">
                 <div class="name name-one">Waiting for Player 1</div>
-                <span class="option rock" data-id='rock'></span>
-                <span class="option paper" data-id='paper'></span>
-                <span class="option scissors" data-id='scissors'></span>
+                <span class="option1 rock" data-id='rock'></span>
+                <span class="option1 paper" data-id='paper'></span>
+                <span class="option1 scissors" data-id='scissors'></span>
                 <div class="win-loss-1"></div>
             </div>
             <div class="boxes result col-md-4">
+                <div class="announcement">
+
+                </div>
 
             </div>
             <div class="boxes player-2 col-md-4">
                 <div class="name name-two">Waiting for Player 2</div>
-                <span class="option rock" data-id='rock'></span>
-                <span class="option paper" data-id='paper'></span>
-                <span class="option scissors" data-id='scissors'></span>
+                <span class="option2 rock" data-id='rock'></span>
+                <span class="option2 paper" data-id='paper'></span>
+                <span class="option2 scissors" data-id='scissors'></span>
                 <div class="win-loss-2"></div>
             </div>
         </div>
@@ -70,7 +72,7 @@
                 <div class="chat-box"></div>
                 <input class="chat-input" type="text" placeholder="Message">
                 <button id="chat-submit" class="btn btn-standard" >Submit</button>
-                <button id="clear-all" class="btn btn-standard" >Clear Game</button>
+                <button id="clear-all" class="btn btn-standard">Clear Game</button>
             </div>
         </div>
     </div>
