--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
         <div class="container">
             <div class="boxes player-1 col-md-4">
                 <div class="name name-one">Waiting for Player 1</div>
-                <span class="option1 rock" data-id='rock'></span>
-                <span class="option1 paper" data-id='paper'></span>
-                <span class="option1 scissors" data-id='scissors'></span>
+                <span class="option1 rock1 rock" data-id='rock'></span>
+                <span class="option1 paper1 paper" data-id='paper'></span>
+                <span class="option1 scissors1 scissors" data-id='scissors'></span>
                 <div class="win-loss-1"></div>
             </div>
             <div class="boxes result col-md-4">
@@ -58,9 +58,9 @@
             </div>
             <div class="boxes player-2 col-md-4">
                 <div class="name name-two">Waiting for Player 2</div>
-                <span class="option2 rock" data-id='rock'></span>
-                <span class="option2 paper" data-id='paper'></span>
-                <span class="option2 scissors" data-id='scissors'></span>
+                <span class="option2 rock2 rock" data-id='rock'></span>
+                <span class="option2 paper2 paper" data-id='paper'></span>
+                <span class="option2 scissors2 scissors" data-id='scissors'></span>
                 <div class="win-loss-2"></div>
             </div>
         </div>
