--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
         <div class="container">
             <div>
                 <h1>R<i class="far fa-hand-rock"></i>ck P<i class="far fa-hand-paper"></i>per Sciss<i class="far fa-hand-scissors"></i>rs</h1>
-                <!-- <img id="title-pic" src="http://static1.squarespace.com/static/595543f6b11be1695b0fdb29/t/59555414cd0f68572370bb64/1498764324553/DFP-RockPaperScissors-Black.png?format=1000w"> -->
             </div>
         </div>
     </div>
@@ -37,7 +36,7 @@
                 <input type="text" id="name-input">
                 <button id="name-submit" class="btn btn-standard">Submit</button>
             </div>
-            <div class="whos-turn">Your turn</div>
+            <div class="whos-turn"></div>
         </div>
     </div>
 
@@ -52,6 +51,9 @@
             </div>
             <div class="boxes result col-md-4">
                 <div class="announcement">
+
+                </div>
+                <div class="restart-button">
 
                 </div>
 
